<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background" >

  <LinearLayout
      	android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        tools:ignore="UselessParent" >
		 <TextView
		     
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/white"
            android:textSize="40dp"
            tools:ignore="SpUsage" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/uname"
            android:textColor="@color/white"
            android:textSize="30dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/username"
            android:textColor="@color/black_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" 
            android:background="@color/white"/>

        <TextView            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upassword"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:ignore="SpUsage" />
        
        <EditText           
            android:id="@+id/password"            
            android:textColor="@color/black_background"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="20dp"
	        tools:ignore="UselessParent">
	        
	        <Button 
	            android:id="@+id/login"
	            android:textColor="@color/white"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:background="@color/blue_background"
	            android:textSize="20dp"
	            android:text="@string/task_login"/>
	          <TextView 
	            
	            android:textColor="@color/white"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            />
	         <Button 	             
	            android:id="@+id/register"
	            android:textColor="@color/white"
	            android:background="@color/blue_background"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:textSize="20dp"
	            android:layout_height="wrap_content"
	            android:text="@string/task_register"/>
         </LinearLayout>
    </LinearLayout>

</RelativeLayout>